--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,174 +1,6 @@
-/**************************** Général ****************************/
-
-.large {
-    margin-top: 20px;
-    margin-bottom: 20px;
-}
-.center {
-    text-align: center;
-}
-
-/**************************** EX1 ****************************/
-
-#evjs_ex1 {
-    width: 454px;
-    margin-left: auto;
-    margin-right: auto;
-}
-#ex13_1_lb1 {
-    display: inline;
-    margin-top: 20px;
-}
-#div_ex1
-{
-    margin-bottom: 20px;;
-}
-#tb_evjs_ex1 {
-    width: 454px;
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: 20px;
-}
-
-/**************************** EX2 ****************************/
-
-#evjs_ex2 {
-    width: 337px;
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: 20px;
-}
-#evjs_ex2_inp {
-    display: inline;
-    margin-top: 20px;
-}
-#evjs_ex2_op {
-    text-align: center;
-}
-
-/**************************** EX3 ****************************/
-
-#evjs_ex3 {
-    width: 439px;
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: 20px;
-    text-align: center;
-}
-#evjs_ex3_inp {
-    display: inline;
-    margin-top: 20px;
-}
-#evjs_ex3_table {
-    margin-top: 25px;
-    margin-bottom: 15px;
-    margin-left: auto;
-    margin-right: auto;
-}
-
-/**************************** EX4 ****************************/
-
-#evjs_ex4 {
-    width: 427px;
-    margin-left: auto;
-    margin-right: auto;
-}
-#evjs_ex4_inp1 {
-    display: inline;
-    margin-top: 5px;
-    margin-left: 66px;
-}
-#evjs_ex4_inp2 {
-    display: inline;
-    margin-top: 10px;
-    margin-left: 97px;
-}
-#evjs_ex4_sb {
-    margin-top: 10px;
-    margin-left: 334px;
-}
-
-/**************************** Jarditou ****************************/
-
-#evjs_ex5 {
-    width: 600px;
-    margin-left: auto;
-    margin-right: auto;
-}
-#evjs_ex5_fs1 {
-    display: flex;
-    justify-content:flex-start;
-    flex-wrap: wrap;
-}
-.w100{
-    width:100%;
-}
-.txt_red {
-    color:red;
-    display: inline;
-}
-.txt_green{
-    color:green;
-    display: inline;
-}
-#evjs_ex5_fs2{
-    display: flex;
-    justify-content: flex-start;
-    flex-wrap: wrap;
-}
-#evjs_ex5_fs2 input{
-    width:49%;
-    margin-bottom: 7px;
-}
-#evjs_ex5_fs2 label {
-    width: 49%;
-}
-#lblsx{
-    width: 600%;
-    margin-bottom: 10px;
-}
-#sx{
-    display: flex;
-    justify-content: flex-start;
-    align-items: center;
-    width: 100%;
-}
-#evjs_ex5_fs3{
-    display: flex;
-    justify-content: flex-start;
-    flex-wrap: wrap;
-    margin-bottom: 8px;
-}
-#evjs_ex5_fs3 select{
-    width:50%;
-    margin-bottom: 8px;
-}
-#evjs_ex5_fs3 label {
-    width: 49%;
-    margin-bottom: 8px;
-}
-#evjs_ex5_fs3 textarea{
-    width: 260px;
-    resize: none;
-    margin-bottom:7px;
-}
-#qu_flex {
-    margin-bottom: 8px;
-}
-#accept_flex{
-    display: flex;
-    justify-content: right;
-    gap:8px;
-}
-.error{
-    width:100%;
-    margin-left:283px;
-    margin-top:-7px;
-    text-align:right;
-}
-.error_left{
-    width:100%;
-    margin-left:35px;
-    margin-top:-7px;
-    text-align:right;
+.back {
+    background-color: #f5c344;
+    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='28' height='49' viewBox='0 0 28 49'%3E%3Cg fill-rule='evenodd'%3E%3Cg id='hexagons' fill='%23ffffff' fill-opacity='0.4' fill-rule='nonzero'%3E%3Cpath d='M13.99 9.25l13 7.5v15l-13 7.5L1 31.75v-15l12.99-7.5zM3 17.9v12.7l10.99 6.34 11-6.35V17.9l-11-6.34L3 17.9zM0 15l12.98-7.5V0h-2v6.35L0 12.69v2.3zm0 18.5L12.98 41v8h-2v-6.85L0 35.81v-2.3zM15 0v7.5L27.99 15H28v-2.31h-.01L17 6.35V0h-2zm0 49v-8l12.99-7.5H28v2.31h-.01L17 42.15V49h-2z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");}
+.container{
+    background-color: white;
 }
